2007-08-24 Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy.c: Chech if there is already a Salut account before
	creating a new one and add more debug messages.

2007-08-24 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac:
	* data/22x22/Makefile.am:
	* data/22x22/empathy-proto-jabber.svg:
	* data/22x22/empathy-proto-jabber.png:
	* data/48x48/Makefile.am:
	* data/32x32/Makefile.am:
	* data/32x32/empathy-proto-jabber.svg:
	* data/32x32/empathy-proto-jabber.png:
	* data/24x24:
	* data/24x24/Makefile.am:
	* data/24x24/empathy-proto-jabber.png:
	* data/16x16/empathy-proto-jabber.svg:
	* data/16x16/Makefile.am:
	* data/16x16/empathy-proto-jabber.png:
	* data/scalable/empathy-proto-jabber.svg:
	* data/scalable/Makefile.am:
	* data/Makefile.am: Change jabber icon. Fixes bug #466377
	(Björn Martensen).

2007-08-23 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-salut.glade:
	* libempathy-gtk/empathy-account-widget-salut.c:
	* libempathy-gtk/empathy-account-widget-salut.h:
	* libempathy-gtk/empathy-preferences.h:
	* libempathy-gtk/empathy-accounts-dialog.c:
	* libempathy-gtk/Makefile.am:
	* src/empathy.c:
	* configure.ac:
	* data/empathy.schemas.in: Add specialised UI for salut settings.
	Configure a Salut account first time empathy is started with
	salut CM installed using gnome-about-me information. Fixes bug #447467
	(Cosimo Cecchi, Xavier Claessens).

2007-08-19 Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathy/Makefile.am:
	* python/pyempathy/pyempathy.override:
	* python/pyempathygtk/Makefile.am: Fix build system, make distcheck now
	works.

2007-08-19 Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathy/pyempathy.defs:
	* python/pyempathy/pyempathymodule.c:
	* python/pyempathy/Makefile.am:
	* python/pyempathy/pyempathy.override:
	* python/pyempathygtk/pyempathygtk.override:
	* python/pyempathygtk/pyempathygtk.defs:
	* python/pyempathygtk/Makefile.am:
	* python/pyempathygtk/pyempathygtkmodule.c: