@@ -1,8 +1,8 @@
 [Profile]
 Manager=salut
-Protocol=salut
+Protocol=local-xmpp
 DisplayName=Salut
 IconName = empathy-proto-salut
-ConfigurationUI = salut
+ConfigurationUI = local-xmpp
 Capabilities = chat-p2p, chat-room, chat-room-list, voice-p2p, supports-avatars, supports-alias
 SupportedPresences = offline,available,away,extended-away,do-not-disturb
